# instagram-clone

./: .gitignore  .python_history  Makefile  README.md  from  pyproject.toml  reqs.txt
chats/: admin.py  consumers.py  forms.py  managers.py  mixins.py  models.py  routing.py  urls.py  views.py
chats/migrations/: 0001_initial.py  0002_alter_chat_unique_together.py  0003_chat_is_active_message_is_active.py  0004_alter_chat_managers_alter_message_managers.py  0005_alter_message_status.py  0006_chat_deleted_at_message_deleted_at.py  0007_alter_chat_managers_alter_message_managers.py
comments/: admin.py  forms.py  managers.py  mixins.py  models.py  signals.py  urls.py  utils.py  views.py
comments/migrations/: 0001_initial.py  0002_initial.py  0003_alter_comment_post.py  0004_alter_comment_managers_alter_comment_slug.py  0005_comment_is_active.py  0006_remove_comment_disabled.py  0007_alter_comment_post.py  0008_comment_deleted_at.py  0009_alter_comment_managers.py
common/: context_processors.py  decorators.py  mixins.py  models.py  utils.py
exceptions/: urls.py
followers/: admin.py  models.py  views.py
followers/migrations/: 0001_initial.py  0002_userfollowing_is_active.py  0003_userfollowing_deleted_at.py
instagram_clone/: asgi.py  settings.py  urls.py
likes/: admin.py  forms.py  mixins.py  models.py  urls.py  utils.py  views.py
likes/migrations/: 0001_initial.py  0002_initial.py  0003_dislike.py  0004_dislike_is_active_like_is_active.py  0005_dislike_deleted_at_like_deleted_at.py
posts/: admin.py  filters.py  forms.py  managers.py  mixins.py  models.py  tests.py  urls.py  utils.py  views.py
posts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_post_managers_post_posts_post_slug_d8ba2b_idx_and_more.py  0004_alter_post_title.py  0005_post_is_active_tags_is_active.py  0006_post_deleted_at_tags_deleted_at.py  0007_alter_post_managers.py
socialaccountAuth/: adapters.py  apps.py  urls.py  views.py
templates/: base.html  index.html
templates/account/: base.html  email_confirm.html
templates/accounts/: account_verification_email.html  forgotPassword.html  resetPassword.html  reset_password_email.html
templates/allauth/: base.html
templates/auth/: register.html
templates/categories/: category-create.html  category-delete.html
templates/chats/: chat-detail.html  chats-list.html
templates/partials/: alerts.html  (+6 more)
users/: admin.py  emails_handler.py  forms.py  managers.py  mixins.py  models.py  permissions.py  signals.py  urls.py  views.py
(+39 files in other folders)
